--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -43,9 +43,14 @@
 		<div class="register-image">
 		</div>
 
-		<!-- Formulario de registro a la derecha -->
 		<div class="register-form">
 			<h2 class="register-header">Registro</h2>
+		
+			<!-- Mostrar errores si existen -->
+			<div th:if="${error}" class="alert alert-danger" role="alert">
+				<p th:text="${error}"></p>
+			</div>
+		
 			<form th:action="@{/usuario/save}" method="post">
 				<div class="form-group">
 					<label for="nombres">Nombres:</label>
@@ -55,27 +60,28 @@
 					<label for="apellido">Apellidos:</label>
 					<input type="text" class="form-control" id="apellidos" name="apellidos" required placeholder="Ingrese sus apellidos" autocomplete="off">
 				</div>
-
+		
 				<div class="form-group">
 					<label for="email">Email:</label>
 					<input type="email" class="form-control" id="email" name="email" required placeholder="Ingrese su email" autocomplete="off">
 				</div>
-
+		
 				<div class="form-group">
 					<label for="direccion">Dirección:</label>
 					<input type="text" class="form-control" id="direccion" name="direccion" required placeholder="Ingrese su dirección" autocomplete="off">
 				</div>
-
+		
 				<div class="form-group">
 					<label for="pwd">Contraseña:</label>
 					<input type="password" class="form-control" id="password" name="password" required placeholder="Ingrese su contraseña" autocomplete="off">
 				</div>
-
+		
 				<div class="form-group">
 					<button type="submit" class="btn btn-success btn-block">Guardar</button>
 				</div>
 			</form>
 		</div>
+		
 	</div>
 
 	<!-- Footer -->
