modal login registro, imagen y fecha devolución

--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -66,9 +66,11 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="img">Imagen:</label>
 				<div class="col-sm-10">
-					<input type="file" class="form-control-file" id="img" name="img">
+					<input type="file" class="form-control-file" id="img" name="img" accept=".jpg,.jpeg,.png,.gif" required>
 				</div>
 			</div>
+				
+				
 
 			<div class="row">
 				<div class="col-sm-2">
