--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -59,18 +59,18 @@
                     <tr>
                       <th scope="col">Producto</th>
                       <th scope="col">Cantidad</th>
+                      <th scope="col">Fecha de Devolución</th>                              
                     </tr>
                   </thead>
                   <tbody>
                     <tr th:each="dtorden:${cart}">
                      <td th:text="${dtorden.nombre}"></td>
                      <td th:text="${dtorden.cantidad}"></td>
-
+                     <td>Plazo máximo "4 Días" </td>
                    </tr>
                  </tbody>
                </table>
              </div>
-
            </div>
          </div>
 
